<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertDatos">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo" />

    <EditText
        android:id="@+id/textTitulo"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:hint="@string/t_tulo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="#4CAF50"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textAutor"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:hint="@string/autor"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="#4CAF50"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo"  />

    <EditText
        android:id="@+id/textEdicion"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:hint="@string/edici_n"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="#4CAF50"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAutor"  />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/guardar"
        android:textColor="#000000"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/buttonVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/volver"
        android:textColor="#000000"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>