<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/iniciar_servicio"
        android:textColor="#000000"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="200dp"
        android:text="@string/parar_servicio"
        android:textColor="#000000"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/volver"
        android:textColor="#000000"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>